--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:design:23.2.0'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
@@ -34,5 +35,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
+    compile 'com.android.support:support-v4:23.2.0'
 }
