--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.wang.avi:library:1.0.5'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.cjj.materialrefeshlayout:library:1.3.0'
 }
